current SVN:

* Added LWIP to the ELK build.

version 0.1.6:

* Update to LLVM r224766.
* Fixed thread spawn memory leak.
* Cleaned up tty driver interrupt handling.
* Added a threading example to ELK examples.
* Updated ELK context switching to not rely on usr stack.

version 0.1.5:

* Added sigprocmask() to ELK.
* Added chroot() to ELK.
* Update to LLVM r223372.
* ELK can run in MMU and non-MMU configurations.
* Added an example of using ELK as a bootstrap program.
* Implemented mmap(), etc. in ELK.
* Added paged based kernel memory management to ELK.
* Support for user space programs in kernal space (e.g. ls, cat).
* Added lazy vnode R/W access to ELK.
* Added a FIFO file system to ELK.
* Added a bunch of ELK system calls for accessing the file system.
* Added a RAM file system to ELK.
* Added a virtual file system to ELK.
* Added a device file system to ELK.
* Added a device module to ELK.
* Added initial ELK futex support. sem_* and pthread_mutex_* work.
* Added ELK file descriptor support.
* Differentiate between ELK and C constructors.
* Started a framework for ELK unit tests.
* Started file descriptor handling for ELK.
* Renamed the ELK scheduler module to thread.

version 0.1.4:

* Added code coverage support functions to compiler-rt build.
* Added capabilities and a bunch of get and set syscalls to ELK.
* Update to LLVM r221448.
* ELK _exit() implemented.
* ELK threads now have process IDs.
* Added ELK constructors.
* Added simple main() example.
* Fix missing ecc-getarch, ecc-getinarch, and ecc-lit scripts for all targets.

version 0.1.3:

* Create the first examples in the examples directory.
* Create #include dependencies for musl.
* Update to LLVM r220554.
* Build compiler-rt with soft floating point for ARM and Mips.
* Fixed and cleaned up the release process.

version 0.1.2:

* Include the correct binaries for targets. Version 0.1.1 was packaged
  incorrectly.
* Include all LLVM binaries with binary distribution.
* Update to LLVM r220032.