@@ -18,8 +18,8 @@
 
 #define TIME			// System time support.
 
-#undef NETWORK                 // Networking support.
-#undef LWIP_NETWORK            // LwIP INET networking support.
+#define NETWORK                 // Networking support.
+#define LWIP_NETWORK            // LwIP INET networking support.
 
 #undef ALL_COMMANDS		// Include all commands.
 #define TIME_COMMANDS           // Include time related commands.
